--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,6 @@
 
-<h1>Cover your page.</h1>
-<p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-<p>
-  <!-- <a class="btn btn-lg btn-secondary"><%= link_to 'Login'%></a> -->
-  <a><%= link_to 'Registrar-se', registration_path%></a>
-</p>
+<h1>Promotion System</h1>
+
+<h3>Boas vindas ao sistema de gestão de promoções</h3>
+
+<%= link_to 'Registrar-se', registration_path %>
