Completo Fluxo Colaborador

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,4 +3,6 @@
 
 <h3>Boas vindas ao sistema de gestão de promoções</h3>
 
+<%= link_to 'Vagas', vacancies_path %>
+
 <%= link_to 'Registrar-se', registration_path %>
