WIP Candidato aplica para uma vaga

--- a/app/views/vacancies/show.html.erb
+++ b/app/views/vacancies/show.html.erb
@@ -9,3 +9,5 @@
   <p> <%= @vacancy.description %> </p>
   <dt>Requisitos</dt>
   <p> <%= @vacancy.requirements %> </p>
+
+<%= link_to "Aplicar para vaga", apply_vacancy_path %>
